data/derived/comb/progs/unify/prog7589.ml.out
Characters 62-75:
  else [n mod 10] :: digitsOfInt n/10;;
                     ^^^^^^^^^^^^^
Error: This expression has type int list list
       but an expression was expected of type int
